--- a/tutorial/chapter2.tex
+++ b/tutorial/chapter2.tex
@@ -2,16 +2,7 @@
 
 \section{Dolor Sit Amet}
 
- Many of the problems in theses and dissertations involve tables. Rules for tables include: 
- 
- \begin{itemize}
-     \item No vertical lines
-     \item Three horizontal lines, two lines for the heading and one for the bottom
-     \item No bold text 
- \end{itemize}
-One simple improvement can be incorporated by using tabularx instead of the tabular environment. This allows a table to be stretched the full text width easily, which avoids the centered or left aligned issue. Table \ref{first} is an examble of the tabularx code. 
- 
- Consectetur adipiscing elit. Fusce eget tempus lectus, non porttitor tellus. Aliquam molestie sed urna quis convallis. Aenean nibh eros, aliquam non eros in, tempus lacinia justo. In magna sapien, blandit a faucibus ac, scelerisque nec purus. 
+ Many of the problems in theses and dissertations involve tables. The UF Graduate Counsel is very specific in the Table Requirements.There should be no vertical lines in tables and only three horizontal lines. No bold text, etc., see the web site for the complete list of requirements. One simple improvement can be incorporated by using tabularx instead of the tabular environment. This allows a table to be stretched the full text width easily, which avoids the centered or left aligned issue. Table \ref{first} is an examble of the tabularx code. Consectetur adipiscing elit. Fusce eget tempus lectus, non porttitor tellus. Aliquam molestie sed urna quis convallis. Aenean nibh eros, aliquam non eros in, tempus lacinia justo. In magna sapien, blandit a faucibus ac, scelerisque nec purus. 
  
 \begin{table}[htbp]% Fix the table captions to sit directly on the table, but figures do NOT sit directly on the figure.
     \captionof{table}{A sample Table using tabularx}\label{first}
@@ -26,7 +17,8 @@ One simple improvement can be incorporated by using tabularx instead of the tabu
     \end{tabularx}
 \end{table}
  
-Praesent fermentum felis nec massa interdum, vel dapibus mi luctus. Cras id fringilla mauris. Ut molestie eros mi, ut hendrerit nulla tempor et. Pellentesque tortor quam, mattis a scelerisque nec, euismod et odio. Mauris rhoncus metus sit amet risus mattis, eu mattis sem interdum.
+ 
+ Praesent fermentum felis nec massa interdum, vel dapibus mi luctus. Cras id fringilla mauris. Ut molestie eros mi, ut hendrerit nulla tempor et. Pellentesque tortor quam, mattis a scelerisque nec, euismod et odio. Mauris rhoncus metus sit amet risus mattis, eu mattis sem interdum.
 
  \begin{table}[htbp]
     \caption{A sample Table using standard tablular}\label{first}
@@ -44,25 +36,10 @@ Praesent fermentum felis nec massa interdum, vel dapibus mi luctus. Cras id frin
 \subsection{Platea Dictumst}
 Donec convallis scelerisque ante, in sollicitudin orci laoreet eu. Nam arcu magna, semper vel lorem eu, venenatis ultrices est. Nam aliquet ut erat ac scelerisque. Maecenas ut molestie mi. Phasellus ipsum magna, sollicitudin eu ipsum quis, imperdiet cursus turpis. Etiam pretium enim a fermentum accumsan. Morbi vel vehicula enim.
 
-\begin{algorithm}[!t]
-\caption{Random Forest Training}\label{alg:ranFor}
-\begin{algorithmic}[1]
-\Procedure{Train}{$X,Y$}
-\State $i \Leftarrow 0$
-\While{$i < TargetNumberOfTrees$}
-\State Sample subsets  $X_i$ and $Y_i$ from X and Y
-\State Train tree $T_i$ with $X_i$ and $Y_i$
-\State $i = i + 1$
-\EndWhile\label{ranFor}
-\State \textbf{return}  Set of Trees Trained 
-\EndProcedure
-\end{algorithmic}
-\end{algorithm}
 
-\subsection{Platea Dictumst}
-Donec convallis scelerisque ante, in sollicitudin orci laoreet eu. Nam arcu magna, semper vel lorem eu, venenatis ultrices est. Nam aliquet ut erat ac scelerisque. Maecenas ut molestie mi. Phasellus ipsum magna, sollicitudin eu ipsum quis, imperdiet cursus turpis. Etiam pretium enim a fermentum accumsan. Morbi vel vehicula enim.
 
-\section{Ex id Ullamcorper Commodo}
+
+\section{Ex id ullamcorper commodo}
 Augue sapien mattis leo, nec accumsan turpis quam at neque. Ut pellentesque velit sed placerat cursus. Integer congue urna non massa dictum, a pellentesque arcu accumsan. Nulla posuere, elit accumsan eleifend elementum, ipsum massa tristique metus, in ornare neque nisl sed odio. Nullam eget elementum nisi. Duis a consectetur erat, sit amet malesuada sapien. Aliquam nec sapien et leo sagittis porttitor at ut lacus. Vivamus vulputate elit vitae libero condimentum dictum. Nulla facilisi. Quisque non nibh et massa ullamcorper iaculis.
 
 Integer laoreet bibendum arcu non pulvinar. Curabitur ac magna nibh. Phasellus sed nisi semper, molestie neque at, tempus lacus. Aenean vitae lacinia est. Phasellus aliquam lacus sit amet placerat molestie. Sed sit amet bibendum lectus, ac ornare ligula. Curabitur porttitor interdum tortor a dignissim. Quisque a placerat nibh. Phasellus lobortis imperdiet augue, non congue est bibendum eu. Vivamus tincidunt quam eu fringilla laoreet.
