--- a/exampleMasterFile.tex
+++ b/exampleMasterFile.tex
@@ -31,7 +31,7 @@
 
 \degreeType{Doctorate of Philosophy}%   Official name of your degree; eg "Doctorate of Philosophy".
 \major{Mechanical Engineering}%                    Your official Department
-\author{Andrew James Jensen}%                  Your Name
+\author{Andrew Jensen}%                  Your Name
 \thesisType{Dissertation}%              Dissertation (PhD) or Thesis (Masters)
 \degreeYear{2021}%                      Intended graduation year (not the year you submit the thesis)
 \degreeMonth{August}%                   Month of graduation should be May, August, or December.
