--- a/Jensen-Lit-Review.tex
+++ b/Jensen-Lit-Review.tex
@@ -31,9 +31,9 @@
 
 \degreeType{Doctorate of Philosophy}%   Official name of your degree; eg "Doctorate of Philosophy".
 \major{Mechanical Engineering}%                    Your official Department
-\author{Andrew Jensen}%                  Your Name
+\author{Andrew James Jensen}%                  Your Name
 \thesisType{Dissertation}%              Dissertation (PhD) or Thesis (Masters)
-\degreeYear{2021}%                      Intended graduation year (not the year you submit the thesis)
+\degreeYear{2022}%                      Intended graduation year (not the year you submit the thesis)
 \degreeMonth{August}%                   Month of graduation should be May, August, or December.
 \chair{Scott Banks}%                   Chair and Cochair (see comment block above).
 
@@ -79,8 +79,8 @@
 
 
 
-\include{./src/ch1-introduction}% Modified from old template.
-\include{./src/ch2-proposal}% Modified from old template.
+\include{./src/ch1-introduction}
+\include{./src/ch2-proposal}
 
 
 \chapter{EXAMPLES OF EDITOR/Author TOOLS, TABLES, AND IMAGES}% Notice that we can use chapter/section etc breaks in the master file if we want, and then use \input instead of \include to avoid unneccessary page breaks.
