--- a/src/ch1-introduction.tex
+++ b/src/ch1-introduction.tex
@@ -1,1 +1,5 @@
-\title{Introduction}
+\chapter{Introduction}
+
+\section{A subsection of the introdcution}
+
+This is part of the introduction test test
