--- a/src/ch2-proposal.tex
+++ b/src/ch2-proposal.tex
@@ -1,1 +1,7 @@
-\title{Literature Review}
+\chapter{Literature Review}
+
+This is the introduction to the literature review that I am going to write
+
+\begin{equation}
+    \frac{hello}{goodbye}
+\end{equation}
