--- a/src/abstractFile.tex
+++ b/src/abstractFile.tex
@@ -1,3 +1,12 @@
 \texttt{Abstract Placeholder}
 
-The main function of our synovial joints is to support dynamic, loaded motion. Pathologies that affect these joints are typi
+{\bf \color{red} This is a brief outline of the main points to make for the abstract}
+
+\begin{description}
+    \item[The function of joints] The main function of our joints is to support dynamic loaded motion
+    \item[Joint Pathologies] Many joint pathologies express themselves during motion. i.e. most of the pain that someone might express would occur during motions like walking or running
+    \item[Clinical Tools available] Clinicians don't have the ability to measure the motion of joints during these painful exercises. 
+    \item[Joint Cost] These diseases cost, on average \$XYZ dollars per year in direct and related costs. Despite this, there are no tools for clinicians to measure the fundamental motions of those joints
+    \item[Existing Methods] Existing methods are far too time-intensive, expensive, invaisive, or unreliable for clinical use.
+    \item[Autonomous Methods] We know that clinicians would eagerly adopt these technologies!  
+\end{description}
