--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -2,20 +2,18 @@
 \singlespacing
 \begin{tabular}{l p{5in}} 
 %if the terms in the first column are longer than 1.4 inches reduce the number 5 appropriately
-$\sum$ & Denotes the summation of a series of terms\\
-\\%This adds the single space between definitions (required)
-$\bigcap$ & A really big bigcap\\
+TKA & Total Knee Arthroplasty. This is the complete or partial resurfacing of the articulating surfaces in the knee.\\
 \\
-fractal & A geometric pattern that is repeated at ever smaller
-scales to produce irregular shapes and surfaces that cannot be represented by classical
-geometry. Fractals are used especially in computer modeling of irregular patterns and structures in nature.\\
+TSA & Total Shoulder Arthoplasty. This is the complete resurfacing of the articulating surfaces in the shoulder.\\
 \\
-polynomial & (in one variable) an expression consisting of the sum of two
-or more terms each of which is the product of a constant and a
-variable raised to an integral power: $ax^2 + bx + c$ is a
-polynomial, where $a, b,$ and $c$ are constants and $x$ is a
-variable.\\
-
+rTSA & Reverse Total Shoulder Arthoplasty. This is a TSA procedure where the "ball and socket" mechanism is reversed.\\
+\\
+ML & Machine Learning. This is the process of feeding a computer inputs and outputs in order to determine an algorithm that goes from input $\longrightarrow$ output\\
+\\
+CNN & Convolutional Neural Network. This is a type of neural network that uses convolution kernels as the operation between each of the layers\\
+\\
+HRNet & High Resolution Convolutional Neural Network. This is a specific CNN created by ({\color{red} ADD CITATION}) (https://github.com/HRNet)\\
+\\
 \end{tabular}
 
 \doublespacing
