--- a/Jensen-Lit-Review.tex
+++ b/Jensen-Lit-Review.tex
@@ -22,29 +22,29 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Below are the commands to set the degree type, department, graduation time, and chair. 
-%       Most of these are self explanatory. 
-%       Note: The \chair command takes an optional argument for a cochair. 
+%       Most of these are self-explanatory. 
+%       Note: The \chair command takes an optional argument for a co-chair. 
 %           So if John was your chair and Jacob was a cochair, you would use \chair[Jacob]{John}.
 %           If John was your chair and you had no cochair, you can simply use \chair{John}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{An Autonomous Method for Measuring 3D Joint Kinematics from 2D Xray Images}%  Put your title here.
 
-\degreeType{Doctorate of Philosophy}%   Official name of your degree; eg "Doctorate of Philosophy".
+\degreeType{Doctorate of Philosophy}%   Official name of your degree; e.g. "Doctorate of Philosophy."
 \major{Mechanical Engineering}%                    Your official Department
 \author{Andrew James Jensen}%                  Your Name
 \thesisType{Dissertation}%              Dissertation (PhD) or Thesis (Masters)
 \degreeYear{2022}%                      Intended graduation year (not the year you submit the thesis)
-\degreeMonth{August}%                   Month of graduation should be May, August, or December.
+\degreeMonth{December}%                   Month of graduation should be May, August, or December.
 \chair{Scott Banks}%                   Chair and Cochair (see comment block above).
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% For each of the following, type in the name of the file that contains each section. 
-%       They are assumed to be tex files, but if they aren't the command takes an optional argument for the extension.
+%       They are assumed to be tex files, but if they aren't, the command takes an optional argument for the extension.
 %       So, you could load dedication.tex as your dedication file using \setDedicationFile{dedication}
 %       You could load dedication.txt instead with \setDedicationFile[txt]{dedication}.
-%       NOTE: For some compilers they may or may not add a .tex to the end of the file automatically.
+%       NOTE: For some compilers, they may or may not add a .tex to the end of the file automatically.
 %           If you get a "couldn't find dedication.tex.tex" type error, try the command with an empty optional argument,
 %           e.g. \setDedicationFile[]{dedication}
 %%%
@@ -72,7 +72,7 @@
 
 \begin{document}
 %%%% Here you just need to include/input your actual work. 
-%       The above files (dedication, acknowledgement, titlepage, etc etc) will all be added for you 
+%       The above files (dedication, acknowledgment, title page, etc, etc) will all be added for you 
 %       using the files you assigned above. 
 %       If you want to input the above files manually you can comment out the \setFILE command above 
 %       and use \input or \include here. Generally you want to use \include to get your pagebreak.
