--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -4,9 +4,9 @@
 %if the terms in the first column are longer than 1.4 inches reduce the number 5 appropriately
 TKA & Total Knee Arthroplasty. This is the complete or partial resurfacing of the articulating surfaces in the knee.\\
 \\
-TSA & Total Shoulder Arthoplasty. This is the complete resurfacing of the articulating surfaces in the shoulder.\\
+TSA & Total Shoulder Arthroplasty. This is the complete resurfacing of the articulating surfaces in the shoulder.\\
 \\
-rTSA & Reverse Total Shoulder Arthoplasty. This is a TSA procedure where the "ball and socket" mechanism is reversed.\\
+rTSA & Reverse Total Shoulder Arthroplasty. This is a TSA procedure where the "ball and socket" mechanism is reversed.\\
 \\
 ML & Machine Learning. This is the process of feeding a computer inputs and outputs in order to determine an algorithm that goes from input $\longrightarrow$ output\\
 \\
