--- a/src/ch1-introduction.tex
+++ b/src/ch1-introduction.tex
@@ -1,5 +1,5 @@
 \chapter{Introduction}
 
-\section{A subsection of the introdcution}
+\section{A subsection of the introduction}
 
-This is part of the introduction test test
+This sheet is part of the introduction test test
