--- a/Jensen-Lit-Review.tex
+++ b/Jensen-Lit-Review.tex
@@ -16,7 +16,7 @@
 %%%                     User Configuration commands
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%% Uncomment the relevant line below if you have tables or figures.
+%% Uncomment the relevant line below if you have tables or figures
 \haveTablestrue%        Uncomment this if you have tables in your thesis.
 \haveFigurestrue%       Uncomment this if you have figures in your thesis.
 
