--- a/src/ch1-introduction.tex
+++ b/src/ch1-introduction.tex
@@ -2,4 +2,6 @@
 
 \section{A subsection of the introduction}
 
+\subsection{another subsection of the introduction}
+
 This sheet is part of the introduction test test
