--- a/src/abstractFile.tex
+++ b/src/abstractFile.tex
@@ -5,8 +5,14 @@
 \begin{description}
     \item[The function of joints] The main function of our joints is to support dynamic loaded motion
     \item[Joint Pathologies] Many joint pathologies express themselves during motion. i.e. most of the pain that someone might express would occur during motions like walking or running
-    \item[Clinical Tools available] Clinicians cannot measure the motion of joints during these painful exercises. 
+    \item[Clinical Tools available] Clinicians can't measure the motion of joints during these painful exercises. 
     \item[Joint Cost] These diseases cost, on average \$XYZ dollars per year in direct and related costs. Despite this, there are no tools for clinicians to measure the fundamental motions of those joints
     \item[Existing Methods] Existing methods are far too time-intensive, expensive, invasive, or unreliable for clinical use.
     \item[Autonomous Methods] We know that clinicians would eagerly adopt these technologies!  
 \end{description}
+
+The primary function of synovial joints is to support the dynamic, loaded motion of the human body. This motion is supported by bony and connective tissue working together with a series of muscles and ligaments to move various parts of the human body. Most joint ailments arise during motion, and most treatments attempt to restore normative motion to the affected joint(s). The financial burden of musculoskeletal issues in the united states is approaching \$XYZ dollars (CITE). Despite that staggering number, clinicians do not have the tools that they need to measure the motion of these joints, espically in a clinical setting. Historical methods of quantifying joint pathology are entirely static. 
+
+In the past, researchers have been able to create methods of determining the motion of joints. Despite their efforts, these methods still rely heavily on invasive techinques, inaccurate measurements, or time consuming computtations. Each of these make them impossible to introduce into a cliniical setting.
+
+Utilizing computatiuonal speed-ups associated with increased computer power, various machine learning techinques have come into play for different computer vision problems. This paper explores the different cases of making an autonomous system that can quantify the 6 DOF kinematics of various joints using only 2D fluoroscopic imaging systems.
