--- a/src/ch2-proposal.tex
+++ b/src/ch2-proposal.tex
@@ -1,4 +1,4 @@
-\chapter{Literature Review}
+\chapter{Research Proposal}
 
 This is the introduction to the literature review that I am going to write
 
